
2009-03-27 tdb
 * Fixed to_string() calls not specifying noxmlns in Views (McSweeney)

2009-03-30 tdb
 * If a name is defined all parts must be defined (""), fixing #3483
 * Added upgrade to DB schema 3.1.2 - fix null parts of names

2009-03-30 cjg
 * Fixed some trivial warnings getting ready for a release.

2009-04-07 tdb
 * Ignore blank lines in DOI import and check for "malformed" response

2009-04-15 cjg
 * Fixed issue in update views which would cause a huge memory spike if an
    illegal view value was requested, rather than just 404.

2009-04-16 cjg
 * Added JSON support.

2009-04-16 cjg
 * Added config. options and better error handling to JSON code.

2009-04-16 cjg
 * Fixed issue with 403 in JSON, and when eprint not found.

2009-04-16 cjg
 * Fixed issue with non standard DOM in Export::JSON

2009-04-16 cjg+tmb
 * Fix for generate-on-demand of /view/foo/index.html URLs

2009-04-17 tmb
 * Added default creators_name view using new A-Z pages option
 * Bundled Unicode::Collate
 * Fixed issues with subject navigation aids on view menus
 * Fixed issues with default division and subject views config

2009-04-22 tmb
 * Made OAI DRIVER set available by default

2009-04-30 tdb
 * Fixed use of substr() on byte-strings in Update::View
 * Use Unicode::Collate to order grouped sections in views

2009-05-06 tdb
 * Merged [4108], removing extraneous <components>

2009-05-11 cjg
 * Added --update option to imports. This is already in trunk but needed
    on 3.1 too.

2009-05-12 cjg
 * Bugfix typo on --update change.

2009-05-26 tdb
 * Fixed MySQL-quoted commands in epadmin upgrade [Alexander Bergolth]

2009-05-27 tdb
 * Fixed login page not using phrase for title

2009-05-28 tdb
 * Fixed an HTML insertion bug in the <title> element [Brian D. Gregg]

2009-06-04 tdb
 * Oracle needs VARCHAR2 ordervalues columns

2009-06-08 tdb
 * Added a prepare_select() method that allows x-database LIMITS
    [Alexander Bergolth]
